<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <!-- App title and fragment titles -->
    <string name="app_name">Track My Sleep Quality</string>
    <string name="sleep_tracker_fragment">SleepTrackerFragment</string>
    <string name="sleep_quality_fragment">SleepQualityFragment</string>

    <!-- Button labels -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>

    <!-- contentDescription strings for quality icons -->
    <string name="quality_0">Sleep Quality 0</string>
    <string name="quality_1">Sleep Quality 1</string>
    <string name="quality_2">Sleep Quality 2</string>
    <string name="quality_3">Sleep Quality 3</string>
    <string name="quality_4">Sleep Quality 4</string>
    <string name="quality_5">Sleep Quality 5</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR SLEEP DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>

    <!-- Sleep quality strings -->
    <string name="how_was_hour_sleep">How was your sleep?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>

    <!-- Toast to play after Clear button has been pressed -->
    <string name="cleared_message">All your sleep data is cleared!.</string>
    <string name="header_text">Sleep Results</string>
    <string name="close">Close</string>
    <string name="minutes_length">%d minutes on %s</string>
    <string name="hours_length">%d hours on %s</string>
    <string name="seconds_length">%d seconds on %s</string>
    <string name="quality_icon">Quality Icon</string>

</resources>
