<!-- Wrapping the layout into /layout to make it available with data binding. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data to make available to the XML via data binding. In this case,
     the whole ViewModel, so that we can access the LiveData,
     click handlers, and state variables. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sleepquality.SleepQualityFragment">

        <ImageView
            android:id="@+id/quality_zero_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/quality_0"
            android:onClick="@{() -> sleepQualityViewModel.onQualityBtnPressed(0)}"
            app:layout_constraintEnd_toStartOf="@+id/quality_one_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:srcCompat="@drawable/ic_sleep_0" />

        <ImageView
            android:id="@+id/quality_one_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quality_1"
            android:onClick="@{() -> sleepQualityViewModel.onQualityBtnPressed(1)}"
            app:layout_constraintBottom_toBottomOf="@+id/quality_zero_image"
            app:layout_constraintEnd_toStartOf="@+id/quality_two_image"
            app:layout_constraintStart_toEndOf="@+id/quality_zero_image"
            app:srcCompat="@drawable/ic_sleep_1" />

        <ImageView
            android:id="@+id/quality_two_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/margin"
            android:contentDescription="@string/quality_2"
            android:onClick="@{() -> sleepQualityViewModel.onQualityBtnPressed(2)}"
            app:layout_constraintBottom_toBottomOf="@+id/quality_one_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/quality_one_image"
            app:srcCompat="@drawable/ic_sleep_2" />

        <ImageView
            android:id="@+id/quality_three_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:contentDescription="@string/quality_3"
            android:onClick="@{() -> sleepQualityViewModel.onQualityBtnPressed(3)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/quality_four_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quality_zero_image"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_sleep_3" />

        <ImageView
            android:id="@+id/quality_four_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quality_4"
            android:onClick="@{() -> sleepQualityViewModel.onQualityBtnPressed(4)}"
            app:layout_constraintBottom_toBottomOf="@+id/quality_three_image"
            app:layout_constraintEnd_toStartOf="@+id/quality_five_image"
            app:layout_constraintStart_toEndOf="@+id/quality_three_image"
            app:layout_constraintTop_toTopOf="@+id/quality_three_image"
            app:srcCompat="@drawable/ic_sleep_4" />

        <ImageView
            android:id="@+id/quality_five_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/margin"
            android:contentDescription="@string/quality_5"
            android:onClick="@{() -> sleepQualityViewModel.onQualityBtnPressed(5)}"
            app:layout_constraintBottom_toBottomOf="@+id/quality_four_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/quality_four_image"
            app:layout_constraintTop_toTopOf="@+id/quality_four_image"
            app:srcCompat="@drawable/ic_sleep_5" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="monospace"
            android:text="@string/how_was_hour_sleep"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="411dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="428dp"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Start of the visible fragment layout using ConstraintLayout -->
    <data>

        <variable
            name="sleepQualityViewModel"
            type="stan.devhouse.trackmysleep.sleepquality.SleepQualityViewModel" />
    </data>
</layout>
