<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="sleepTrackerViewModel"
                  type="stan.devhouse.trackmysleep.sleeptracker.SleepTrackerViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".sleeptracker.SleepTrackerFragment">

        <androidx.recyclerview.widget.RecyclerView android:layout_width="0dp" android:layout_height="0dp"
                                                   android:id="@+id/recycler_view"
                                                   app:layout_constraintBottom_toTopOf="@id/clear_button"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   app:layout_constraintTop_toTopOf="parent"
                                                   />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:text="@string/start"
                android:layout_height="wrap_content"
                android:onClick="@{() -> sleepTrackerViewModel.onStartTracking()}"
                android:enabled="@{sleepTrackerViewModel.startButtonVisibility}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/clear_button"
                android:layout_marginBottom="8dp"
                app:cornerRadius="12dp" app:layout_constraintEnd_toStartOf="@+id/stop_button"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view"
                android:layout_marginStart="32dp"/>

        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:onClick="@{() -> sleepTrackerViewModel.onStopTracking()}"
                android:enabled="@{sleepTrackerViewModel.stopButtonVisibility}"
                app:layout_constraintStart_toEndOf="@+id/start_button"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view"
                app:layout_constraintBottom_toBottomOf="@+id/start_button"
                android:id="@+id/stop_button"
                android:text="@string/stop"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/start_button"
                android:onClick="@{() -> sleepTrackerViewModel.onClear()}"
                android:enabled="@{sleepTrackerViewModel.clearButtonVisibility}"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/clearColor"
                android:id="@+id/clear_button"
                android:text="@string/clear"
                app:layout_constraintTop_toBottomOf="@id/recycler_view"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>